Наши первые изменения

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
 
     <p>Git + GitHub</p>
+    <h2>Hello</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id beatae maxime veniam accusantium ratione cupiditate quas voluptas assumenda cumque! Libero.</p>
     
 </body>
 </html>
