Работа с файлов gitconfig

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p>Git + GitHub</p>
     <h2>Hello</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id beatae maxime veniam accusantium ratione cupiditate quas voluptas assumenda cumque! Libero.</p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente, iusto.
     
 </body>
 </html>
