--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <h2>Hello</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id beatae maxime veniam accusantium ratione cupiditate quas voluptas assumenda cumque! Libero.</p>
     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente, iusto.
+    <p>Git + GitHub</p>
+    <h2>Hello</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id beatae maxime veniam accusantium ratione cupiditate quas voluptas assumenda cumque! Libero.</p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente, iusto.
     
 </body>
 </html>
